[workspace]
resolver = "2"
members = ["days/common", "days/day1", "days/day2", "days/day3"]

[workspace.dependencies]
serde = { version = "1.0.215", features = ["derive"] }
nom = "7.1.3"
chumsky = "1.0.0-alpha.7"
logos = { version = "0.14.2", features = ["debug"] }
anyhow = "1.0.93"
itertools = "0.13.0"
